# auto_parser

./: .gitignore  README.md  pyproject.toml
src/auto_parser/: api_fetcher.py  create.py  fetch_filters.py  generate_matrix.py  main.py  parser.py
